--- a/client/template.html
+++ b/client/template.html
@@ -2,6 +2,15 @@
 <html>
   <head>
     <title>PushPow</title>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-80E6RR2W9R"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+
+	  gtag('config', 'G-80E6RR2W9R');
+	</script>
   </head>
   <body>
     <div id="game">
